--- a/htmls/login.html
+++ b/htmls/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
     <title>HelPC - Авторизация</title>
   </head>
   <body class="bg-light justify-content-center">
@@ -21,13 +21,13 @@
             <input class="form-control input-lower" id="inputPassword" type="password" placeholder="Пароль" required>
             <label for="inputPassword">Пароль</label>
           </div>
-        </div><a class="btn btn-lg btn-primary btn-block" href="index.html">Войти</a>
+        </div><a class="btn btn-lg btn-primary btn-block" href="../index.html">Войти</a>
       </form>
       <footer class="footer-sticky text-center">
         <p style="color: rgba(52, 58, 64, .3);">&copy; 2017 HelPC. All Rights Reserved.</p>
       </footer>
     </div>
   </body>
-  <script src="js/libs.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="../js/libs.js"></script>
+  <script src="../js/scripts.js"></script>
 </html>
