--- a/pricelist.html
+++ b/pricelist.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <nav class="navbar navbar-light">
-        <div><a class="navbar-brand" href="main.html">Hel<span style="color: #f25f5c; text-decoration: underline;">PC</span></a>
+        <div><a class="navbar-brand" href="index.html">Hel<span style="color: #f25f5c; text-decoration: underline;">PC</span></a>
           <p class="d-none d-md-block">Скорая компьютерная помощь</p>
         </div>
         <div><span class="font-weight-bold d-none d-md-block">Наш телефон:</span><span class="lead">+7 (800) 000-00-00</span></div>
