Добавлен тип работы в добавлении заявки

--- a/admin.html
+++ b/admin.html
@@ -25,6 +25,15 @@
                                     <input type="text" class="form-control" placeholder="Не включается компьютер">
                                 </div>
                                 <div class="form-group">
+                                    <label>Категория</label>
+                                    <select class="custom-select">
+                                        <option value="" selected>Программное обеспечение</option>
+                                        <option value="">Аппаратное обеспечение</option>
+                                        <option value="">Сеть</option>
+                                        <option value="">Прочие</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
                                     <label>Стоимость</label>
                                     <input type="text" class="form-control" placeholder="500">
                                 </div>
